# Mirage_GIF

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerOptions.cmake  PkgconfigUtils.cmake
lib/file_io/: CMakeLists.txt
lib/file_io/include/: file_reader.h  file_utils.h  file_writer.h
lib/file_io/src/: file_reader.cpp  file_writer.cpp
lib/gif_enc/: CMakeLists.txt
lib/gif_enc/include/: gif_encoder.h  gif_exception.h  gif_format.h  gif_lzw.h
lib/gif_enc/src/: gif_encoder.cpp  gif_format.cpp  gif_lzw_dec.cpp  gif_lzw_enc.cpp
lib/image_sequence/: CMakeLists.txt
lib/image_sequence/include/: dither.h  imsq.h  imsq_exception.h  imsq_stream.h  quantizer.h
lib/image_sequence/src/: gdi_initializer.cpp  gdi_initializer.h  imsq_ffmpeg.cpp  imsq_gdi.cpp  imsq_magick.cpp  imsq_native.cpp  imsq_webp.cpp  imsqs_ffmpeg.cpp  imsqs_gdi.cpp  imsqs_native.cpp  quant_leptonica.cpp  quant_native.cpp
lib/include/: cli_utils.h  def.h  defer.h  log.h  path.h
lsb/: CMakeLists.txt
lsb/include/: MimeTypes.h  file_reader.h  gif_lsb.h  interface.h  mark.h  options.h
lsb/src/: MimeTypes.cpp  file_reader.cpp  gif_lsb_dec.cpp  gif_lsb_enc.cpp  main_dec.cpp  main_enc.cpp  main_lib.cpp  mark.cpp  options_dec.cpp  options_enc.cpp
mirage/: CMakeLists.txt
mirage/include/: gif_mirage.h  gif_options.h
mirage/legacy/: main.py  merge.py
mirage/src/: gif_mirage.cpp  gif_options.cpp  main.cpp
test/: .gitignore  compile.ps1  compile.sh  lsb.ps1  lsb.py  mirage.ps1  mirage.py  modify_disposal_method.py  utils.ps1  utils.py  valgrind.sh
test/lsblib/: CMakeLists.txt  main_dec.cpp  main_enc.cpp
test/mirage/: .gitignore
test/quant/: CMakeLists.txt  cmp.py  main.cpp
test/resize/: CMakeLists.txt  main.cpp  stb_image.h  stb_image_write.h
whatever/: CMakeLists.txt  main_imsq.cpp  main_leptonica.cpp  main_opencv.cpp  whatever.html
